Chapter 3 RepoStarterCode/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.11.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;C:\Users\akumar2\Desktop\AP Computer Science\chapter3-apcs-20-21-adeshkumar1\Chapter 3 RepoStarterCode
-d
C:\Users\akumar2\Desktop\AP Computer Science\chapter3-apcs-20-21-adeshkumar1\Chapter 3 RepoStarterCode\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\akumar2\Desktop\AP Computer Science\chapter3-apcs-20-21-adeshkumar1\Chapter 3 RepoStarterCode\TurtleGraphics\AbstractPen.java
<---- end of javadoc command ---->
Loading source file C:\Users\akumar2\Desktop\AP Computer Science\chapter3-apcs-20-21-adeshkumar1\Chapter 3 RepoStarterCode\TurtleGraphics\AbstractPen.java...
Constructing Javadoc information...
Standard Doclet version 11.0.2
Building tree for all the packages and classes...
Generating C:\Users\akumar2\Desktop\AP Computer Science\chapter3-apcs-20-21-adeshkumar1\Chapter 3 RepoStarterCode\doc\TurtleGraphics\AbstractPen.html...
Generating C:\Users\akumar2\Desktop\AP Computer Science\chapter3-apcs-20-21-adeshkumar1\Chapter 3 RepoStarterCode\doc\TurtleGraphics\package-summary.html...
Generating C:\Users\akumar2\Desktop\AP Computer Science\chapter3-apcs-20-21-adeshkumar1\Chapter 3 RepoStarterCode\doc\constant-values.html...
C:\Users\akumar2\Desktop\AP Computer Science\chapter3-apcs-20-21-adeshkumar1\Chapter 3 RepoStarterCode\TurtleGraphics\TestPen.java:4: error: package TerminalIO does not exist
import TerminalIO.KeyboardReader;
                 ^
Building index for all the packages and classes...
Building index for all classes...
Generating C:\Users\akumar2\Desktop\AP Computer Science\chapter3-apcs-20-21-adeshkumar1\Chapter 3 RepoStarterCode\doc\allclasses.html...
Generating C:\Users\akumar2\Desktop\AP Computer Science\chapter3-apcs-20-21-adeshkumar1\Chapter 3 RepoStarterCode\doc\allclasses.html...
Generating C:\Users\akumar2\Desktop\AP Computer Science\chapter3-apcs-20-21-adeshkumar1\Chapter 3 RepoStarterCode\doc\index.html...
1 error
